Closed
Bug 220057
Opened 22 years ago
Closed 22 years ago
Crash using nsBoxObject w/ null mContent
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: crash)
Attachments
(1 file)
|
1.63 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
./run-mozilla.sh ./xpcshell
a='@mozilla.org/layout/xul-boxobject-browser;1';
var o = Components.classes[a].createInstance();
o instanceof Components.interfaces.nsIBoxObject;
print(a,'\t',o);
for (c in o) try {
dump(c+' ');
print(o[c]);
} catch(e) {
print(e);
}
actual results: crash
expected results: no crash
reason for crash: uninitalized mContent
The properties the fail are: .x,.y,.screenX,.screenY
Attachment #131985 -
Flags: superreview?(roc)
Attachment #131985 -
Flags: review?(roc)
Attachment #131985 -
Flags: superreview?(roc)
Attachment #131985 -
Flags: superreview+
Attachment #131985 -
Flags: review?(roc)
Attachment #131985 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•