Bug 220057 Crash using nsBoxObject w/ null mContent r=roc sr=roc